# particles

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.hpp  Renderer.cpp  Renderer.hpp  System.cpp  System.hpp  kernel.cl  main.cpp  main.hpp  test.cl
